opam-version: "2.0"
name: "kdf"
maintainer: ["Alfredo Beaumont <alfredo.beaumont@gmail.com>" "Hannes Mehnert <hannes@mehnert.org>"]
authors: ["Alfredo Beaumont <alfredo.beaumont@gmail.com>" "Sonia Meruelo <smeruelo@gmail.com>" "Hannes Mehnert <hannes@mehnert.org>"]
license: "BSD-2-Clause"
homepage: "https://github.com/robur-coop/kdf"
doc: "https://robur-coop.github.io/kdf/doc"
bug-reports: "https://github.com/robur-coop/kdf/issues"
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "1.8.0"}
  "digestif" {>= "1.2.0"}
  "mirage-crypto" {>= "1.0.0"}
  "alcotest" {with-test & >= "0.8.1"}
  "ohex" {with-test & >= "0.2.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/robur-coop/kdf.git"
synopsis: "Key Derivation Functions: HKDF RFC 5869, PBKDF RFC 2898, SCRYPT RFC 7914"
description: """
A pure OCaml implementation of [scrypt](https://tools.ietf.org/html/rfc7914),
[PBKDF 1 and 2 as defined by PKCS#5](https://tools.ietf.org/html/rfc2898),
and [HKDF](https://tools.ietf.org/html/rfc5869).
"""
